--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,8 @@
-﻿aiohappyeyeballs==2.4.4
-aiohttp==3.11.11
-aiosignal==1.3.2
-async-timeout==5.0.1
-attrs==25.1.0
-audioread==3.0.1
-blinker==1.9.0
-certifi==2024.12.14
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-colorama==0.4.6
-contourpy==1.3.0
-cycler==0.12.1
-datasets==2.21.0
-decorator==5.1.1
-dill==0.3.8
-filelock==3.17.0
-Flask==3.1.0
-fonttools==4.55.8
-frozenlist==1.5.0
-fsspec==2024.6.1
-huggingface-hub==0.27.1
-huggingsound==0.1.6
-idna==3.10
-imbalanced-learn==0.12.4
-imblearn==0.0
-importlib_metadata==8.6.1
-importlib_resources==6.5.2
-itsdangerous==2.2.0
-Jinja2==3.1.5
-jiwer==2.6.0
-joblib==1.4.2
-kiwisolver==1.4.7
-librosa==0.9.2
-llvmlite==0.43.0
-MarkupSafe==3.0.2
-matplotlib==3.9.4
-mpmath==1.3.0
-multidict==6.1.0
-multiprocess==0.70.16
-networkx==3.2.1
-numba==0.60.0
-numpy==2.0.2
-packaging==24.2
-pandas==2.2.3
-pillow==10.2.0
-platformdirs==4.3.6
-pooch==1.8.2
-propcache==0.2.1
-pyarrow==19.0.0
-pycparser==2.22
-pyparsing==3.2.1
-python-dateutil==2.9.0.post0
-pytz==2024.2
-PyYAML==6.0.2
-rapidfuzz==2.13.7
-regex==2024.11.6
-requests==2.32.3
-resampy==0.4.3
-safetensors==0.5.2
-scikit-learn==1.6.1
-scipy==1.13.1
-six==1.17.0
-soundfile==0.13.1
-sympy==1.13.1
-threadpoolctl==3.5.0
-tokenizers==0.21.0
-torch==2.5.1
-torchaudio==2.5.1+cu118
-torchvision==0.20.1+cu118
-tqdm==4.67.1
-transformers==4.48.1
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-Werkzeug==3.1.3
-xxhash==3.5.0
-yarl==1.18.3
-zipp==3.21.0
+flask
+transformers
+librosa
+numpy
+joblib
+torch  # Required for transformers
+scikit-learn  # Required for joblib SVM model
+soundfile  # Required for librosa audio processing
